[gd_scene load_steps=14 format=2]

[ext_resource path="res://custom_nodes/hitBox.gd" type="Script" id=1]
[ext_resource path="res://custom_nodes/hurtBox.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/chipsEnemy.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.71

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.5, 31 )

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "take_damage_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 0.87451, 0.101961, 0.101961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:is_attacking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:is_attacking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="chipsEnemy" type="RigidBody2D"]
collision_layer = 0
mode = 2
physics_material_override = SubResource( 4 )
script = ExtResource( 4 )
friction_custom = 7.0
friction_multiplier = 1.7
base_distance_kept_from_player = 7.0
base_knockback_distance = 1.0
base_speed = 100
base_max_speed = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
unique_name_in_owner = true
texture = ExtResource( 3 )

[node name="hitBox" type="Area2D" parent="Sprite"]
scale = Vector2( 1, 1.04 )
collision_layer = 4
collision_mask = 0
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/hitBox"]
position = Vector2( -51, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="Sprite/hitBox"]
modulate = Color( 1, 1, 1, 0.0941176 )
position = Vector2( -51, 0 )
scale = Vector2( 0.687132, 0.954037 )
texture = ExtResource( 3 )

[node name="StartAttackArea" type="Area2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2( -48, 0 )
scale = Vector2( 1.76221, 2.99261 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StartAttackArea"]
self_modulate = Color( 0.0745098, 0.0666667, 1, 1 )
shape = SubResource( 7 )

[node name="hurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource( 3 )

[node name="GettingHitAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 5 )
anims/take_damage_anim = SubResource( 6 )

[node name="AttackAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 9 )
anims/attack = SubResource( 8 )

[node name="KnockbackTimeLeft" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true
